# slide-generator

./: .env.example  .gitignore  Makefile  README.md  gabarito.html  main.py  pyproject.toml
scripts/: generate_gab.py
src/: __init__.py  server.py
src/api/: __init__.py  app.py  dependencies.py
src/api/dependencies/: __init__.py  controllers.py
src/api/routers/: __init__.py  answer_keys.py  health.py  markdown.py  slides.py
src/controllers/: __init__.py  answer_key_controller.py  slide_controller.py
src/core/: __init__.py  config.py  exceptions.py  settings.py
src/schemas/: __init__.py  answer_key.py  markdown.py  slide.py
src/services/: __init__.py  abnt_styles.py  answer_key_docx_service.py  answer_key_html_service.py  answer_key_markdown_service.py  answer_key_parser_service.py  html_service.py  markdown_pdf_service.py  mermaid_service.py  parser_service.py  pdf_service.py  slide_docx_service.py  slide_html_service.py  slide_markdown_service.py  slide_parser_service.py  slide_pptx_service.py
src/static/: app.js  index.html  styles.css
src/templates/: answer_key.html  answer_key_styles.css  slide_styles.css  slides.html
tests/: test_answer_key_parser_service.py  test_answer_key_renderers.py  test_parser_service.py  test_slide_renderers.py
